# ChangeLog for dev-util/eclipse-sdk
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  reverting to latest running eclipse ebuild, due to errors on eclipse startup

  06 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  added tomcat use flag. reviewed patchset

  01 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  digester-rss dependency changed

  01 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  Added missing eclipse-ecj-3.2 dependency

  01 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  Modified SRC_URI to get the right patches archive

  31 Oct 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  Rewritten ebuild. Uses jars from dependecies. Whole fedora patchset applied
