@@ -4,14 +4,18 @@ RMD160 141c5d412c50dcb106654b4078cbaf379b468130 files/eclipse-3.2 1145
 SHA256 920b48ed98bc18f6e90769fe084eced46304c4c1a8b3999c5644297f437b1cbd files/eclipse-3.2 1145
 DIST eclipse-sdk-3.2.1-r1-patches.tar.bz2 85951 RMD160 55a0f98229feb47d936acbcdcf7ad42074ebdb5c SHA1 4af81d8615dbfbd771136c441ee8a7b53096b468 SHA256 fa9f8d047d8375ab55eaca12c110bd9faf9eb5452af2a70d038afd5a6b4b5171
 DIST eclipse-sourceBuild-srcIncluded-3.2.1.zip 82433420 RMD160 9648176b79adac7217371e5b8dee7aeb4cd458db SHA1 a27bae4ff9f866a1fab995eae2da00ab2be5e840 SHA256 2d6a0628333d068b6ab678c42f925d71df1c003035543830a30e3ee80fb855c7
-EBUILD eclipse-sdk-3.2.1-r2.ebuild 23525 RMD160 314bc808bed2ece502cce376fd435ce45713f329 SHA1 e34b71b4ce3a36c8fdfeac11af15e3a18ed526c7 SHA256 f4c7b2d1b012ba7aeb2bdcf2ee181ae94f4b717bb448d4e8ce272c426df85847
-MD5 698dccc28fd5dc8eb21a10b170d8eccc eclipse-sdk-3.2.1-r2.ebuild 23525
-RMD160 314bc808bed2ece502cce376fd435ce45713f329 eclipse-sdk-3.2.1-r2.ebuild 23525
-SHA256 f4c7b2d1b012ba7aeb2bdcf2ee181ae94f4b717bb448d4e8ce272c426df85847 eclipse-sdk-3.2.1-r2.ebuild 23525
-MISC ChangeLog 834 RMD160 3289a7988ec4305c0b1a07df0842e094b3c4f579 SHA1 d192e8cbc5ea9a39d26b0967d32f4fd7f87898fc SHA256 5569c251022608f76c7cb9f637367c365e25ee4e77099a74123f52f37f554a6a
-MD5 287935204b6b02d7aee453c2858125b9 ChangeLog 834
-RMD160 3289a7988ec4305c0b1a07df0842e094b3c4f579 ChangeLog 834
-SHA256 5569c251022608f76c7cb9f637367c365e25ee4e77099a74123f52f37f554a6a ChangeLog 834
+EBUILD eclipse-sdk-3.2.1-r2.ebuild 22267 RMD160 e9a246eb19d904c9fd11a06b5920d695d2b91578 SHA1 969425f051283fe76f272e5faca977e287accc31 SHA256 095664302d89aac4a0fa64305e0239da8bf81790a5e1920ae2083a44ce816091
+MD5 6ffb2fa2be256f0b3bd9ed480776d1b6 eclipse-sdk-3.2.1-r2.ebuild 22267
+RMD160 e9a246eb19d904c9fd11a06b5920d695d2b91578 eclipse-sdk-3.2.1-r2.ebuild 22267
+SHA256 095664302d89aac4a0fa64305e0239da8bf81790a5e1920ae2083a44ce816091 eclipse-sdk-3.2.1-r2.ebuild 22267
+MISC ChangeLog 922 RMD160 41e34019c39ed5f9db6337afabbe95a682ece5c1 SHA1 668218b3948259970fce564f2edb9fbd18b25835 SHA256 87796b49d5f76b486a3ea056478f312243b9b5889328d5a0b7c7581513e4010e
+MD5 5c6b4025f89fa53ac4e85bc7e1ccf1cc ChangeLog 922
+RMD160 41e34019c39ed5f9db6337afabbe95a682ece5c1 ChangeLog 922
+SHA256 87796b49d5f76b486a3ea056478f312243b9b5889328d5a0b7c7581513e4010e ChangeLog 922
+MISC metadata.xml 782 RMD160 5b8dc4f4b6bdd457da62f967ec176bee2ae7e5e4 SHA1 17bc63605d0a30dca27521cf908a69c0996eab07 SHA256 a1e6bbc5427799b8607d355e3e09ce7d4de98f2a365417ec158eb56f4f00746f
+MD5 8de14dda7d318d8fb514fdbcecd4058b metadata.xml 782
+RMD160 5b8dc4f4b6bdd457da62f967ec176bee2ae7e5e4 metadata.xml 782
+SHA256 a1e6bbc5427799b8607d355e3e09ce7d4de98f2a365417ec158eb56f4f00746f metadata.xml 782
 MD5 2364957019ebba24ca9af9631f7a86c8 files/digest-eclipse-sdk-3.2.1-r2 596
 RMD160 130025e444efc3a79b198baa4b673b49b117400f files/digest-eclipse-sdk-3.2.1-r2 596
 SHA256 da442cfe724dbdf31b936830117b876bff94378e5bbb0e1162d12ce590de0e82 files/digest-eclipse-sdk-3.2.1-r2 596
