@@ -2,6 +2,13 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+# THIS EBUILD IS THE PORTING ON GENTOO OF THE FEDORA BUILD FILE
+# A HUGE "THANK YOU" TO THE FEDORA GUYS FOR THEIR EFFORT
+#
+# IF YOU WANT TO MAINTAIN THIS EBUILD, PLEASE CHECK "eclipse.spec" FILE AT
+# http://cvs.fedora.redhat.com/viewcvs/devel/eclipse/
+# (USE %patch COMMAND AS A REFERENCE TO THEIR ORIGINAL BUILD FILE)
+
 inherit java-pkg-2 check-reqs
 
 DATESTAMP="200609210945"
@@ -11,57 +18,48 @@ DESCRIPTION="Eclipse Tools Platform"
 HOMEPAGE="http://www.eclipse.org/"
 SRC_URI="http://download.eclipse.org/eclipse/downloads/drops/R-${PV}-${DATESTAMP}/${MY_A}
 	mirror://gentoo/${P}-r1-patches.tar.bz2"
-IUSE="branding cairo gnome opengl seamonkey "
+IUSE="branding cairo gnome opengl seamonkey tomcat"
 SLOT="3.2"
 LICENSE="EPL-1.0"
 KEYWORDS="~amd64 ~ppc ~x86"
 
-S="${WORKDIR}"
+S=${WORKDIR}
 
 COMMON_DEP="
 	>=dev-java/ant-1.6.5
-	=dev-java/commons-beanutils-1.6*
-	dev-java/commons-collections
-	dev-java/commons-digester
-	dev-java/commons-digester-rss
-	dev-java/commons-dbcp
-	dev-java/commons-el
-	dev-java/commons-fileupload
-	dev-java/commons-launcher
-	dev-java/commons-logging 
-	dev-java/commons-modeler 
-	dev-java/commons-pool
-	=dev-java/mx4j-2.1*
-	>=www-servers/tomcat-5.5.17
+	tomcat? (
+		dev-java/commons-digester-rss
+		=dev-java/mx4j-2.1*
+		=dev-java/jakarta-regexp-1.3*
+		>=www-servers/tomcat-5.5.17
+	)
 	=dev-java/lucene-1*
-	=dev-java/jakarta-regexp-1.3*
 	>=dev-java/junit-3.8.1
-	>=dev-java/servletapi-2.4
-	>=x11-libs/cairo-1.0
 	>=x11-libs/gtk+-2.6
+	cairo? ( >=x11-libs/cairo-1.0 )
 	seamonkey? ( www-client/seamonkey )
-	gnome? ( =gnome-base/gnome-vfs-2* =gnome-base/libgnomeui-2* )
+	gnome? 	(
+		=gnome-base/gnome-vfs-2*
+		=gnome-base/libgnomeui-2*
+		)
 	opengl? ( virtual/opengl )
-	=dev-java/eclipse-ecj-3.2*
-	"
+	=dev-java/eclipse-ecj-3.2*"
 
 RDEPEND=">=virtual/jre-1.4
 	${COMMON_DEP}"
 
-DEPEND="
-	${COMMON_DEP}
+DEPEND="${COMMON_DEP}
 	=virtual/jdk-1.4*
 	>=virtual/jdk-1.5
 	>=sys-apps/findutils-4.1.7
 	app-arch/unzip
-	app-arch/zip
-	app-text/dos2unix
-	"
+	app-arch/zip"
+#	app-text/dos2unix" See comment some hundreds lines below
 
 # Force 1.4 to be used for building
 JAVA_PKG_NV_DEPEND="=virtual/jdk-1.4*"
 
-# Force using eclipse compiler
+# Force compiling with ecj
 JAVA_PKG_FORCE_COMPILER="ecj-3.2"
 
 ECLIPSE_DIR="/usr/lib/eclipse-${SLOT}"
@@ -70,7 +68,6 @@ ECLIPSE_DIR="/usr/lib/eclipse-${SLOT}"
 # - keyword ppc64 and ia64
 # - ppc support not tested, but not explicitly broken either
 # - update man page
-# - write a wiki page about and bring order into this mess
 
 pkg_setup() {
 	java-pkg-2_pkg_setup
@@ -120,10 +117,10 @@ src_compile() {
 
 	einfo "Using bootclasspath ${bootclasspath}"
 	einfo "Using JVM library path ${JAVA_LIB_DIR}"
-	
+
 	if use seamonkey ; then
 		einfo "Will compile embedded seamonkey support against www-client/seamonkey"
-		
+
 		setup-mozilla-opts
 	else
 		einfo "Not building embedded seamonkey support"
@@ -161,7 +158,7 @@ src_install() {
 	doexe ${FILESDIR}/eclipse-${SLOT}
 
 	make_desktop_entry eclipse-${SLOT} "Eclipse ${PV}" "${ECLIPSE_DIR}/icon.xpm"
-	
+
 	cd ${D}/${ECLIPSE_DIR}
 	echo "-Djava.library.path=/usr/lib" >> eclipse.ini
 
@@ -208,7 +205,7 @@ install-link-system-jars() {
 	java-pkg_jarfrom ant-tasks
 	popd > /dev/null
 	## END ANT ##
-	
+
 	## BEGIN LUCENE ##
 	pushd plugins/org.apache.lucene_*/ > /dev/null || die "pushd failed"
 	rm lucene-1.4.3.jar
@@ -216,38 +213,39 @@ install-link-system-jars() {
 	popd > /dev/null
 	## END LUCENE ##
 
-	## BEGIN TOMCAT ##
-	pushd plugins/org.eclipse.tomcat_* > /dev/null || die "pushd failed"
-	mkdir lib
-	pushd lib > /dev/null || die "pushd failed"
-	java-pkg_jarfrom tomcat-5.5
-	java-pkg_jarfrom mx4j-2.1
-	java-pkg_jarfrom commons-beanutils-1.6
-	java-pkg_jarfrom commons-collections
-	java-pkg_jarfrom commons-dbcp
-	java-pkg_jarfrom commons-digester
-	java-pkg_jarfrom commons-digester-rss
-	java-pkg_jarfrom commons-el
-	java-pkg_jarfrom commons-fileupload
-	java-pkg_jarfrom commons-launcher
-	java-pkg_jarfrom commons-logging
-	java-pkg_jarfrom commons-modeler
-	java-pkg_jarfrom commons-pool
-	java-pkg_jarfrom servletapi-2.4 servlet-api.jar servletapi5.jar
-	java-pkg_jarfrom servletapi-2.4 jsp-api.jar jspapi.jar
-	java-pkg_jarfrom jakarta-regexp-1.3
-	ln -s /usr/share/tomcat-5.5/bin/bootstrap.jar bootstrap.jar
-	popd > /dev/null
-	popd > /dev/null
-	## END TOMCAT ##
+	if use tomcat; then
+		## BEGIN TOMCAT ##
+		pushd plugins/org.eclipse.tomcat_* > /dev/null || die "pushd failed"
+		mkdir lib
+		pushd lib > /dev/null || die "pushd failed"
+		java-pkg_jarfrom tomcat-5.5
+		java-pkg_jarfrom mx4j-2.1
+		java-pkg_jarfrom commons-beanutils-1.7
+		java-pkg_jarfrom commons-collections
+		java-pkg_jarfrom commons-dbcp
+		java-pkg_jarfrom commons-digester
+		java-pkg_jarfrom commons-digester-rss
+		java-pkg_jarfrom commons-el
+		java-pkg_jarfrom commons-fileupload
+		java-pkg_jarfrom commons-launcher
+		java-pkg_jarfrom commons-logging
+		java-pkg_jarfrom commons-modeler
+		java-pkg_jarfrom commons-pool
+		java-pkg_jarfrom servletapi-2.4 servlet-api.jar servletapi5.jar
+		java-pkg_jarfrom servletapi-2.4 jsp-api.jar jspapi.jar
+		java-pkg_jarfrom jakarta-regexp-1.3
+		ln -s /usr/share/tomcat-5.5/bin/bootstrap.jar bootstrap.jar
+		popd > /dev/null
+		popd > /dev/null
+		## END TOMCAT ##
+	fi
 }
 
 patch-local-cflags() {
-	# Build using O2
-	# https://bugs.eclipse.org/bugs/show_bug.cgi?id=71637
 	pushd plugins/org.eclipse.swt/Eclipse\ SWT\ PI/gtk/library >/dev/null || die "pushd failed"
 	# %patch0 -p0
-#	epatch ${WORKDIR}/${P}-gentoo-libswt-enableallandO2.patch
+	# we prefer to sed the make_linux.mak file instead of applying a patch.
+	# this improves maintainability and allows to inject our own CFLAGS
 
 	sed -i "s/CFLAGS\ =\ -O\ -Wall/CFLAGS = ${CFLAGS}\ -Wall/" \
 		make_linux.mak \
@@ -287,28 +285,26 @@ patch-local-cflags() {
 }
 
 patch-jni-libs() {
-	# Build JNI libs
-	# FIXME:  these should be built by upstream build method
-	# http://www.bagu.org/eclipse/plugin-source-drops.html
-	# https://bugs.eclipse.org/bugs/show_bug.cgi?id=71637
-	# https://bugs.eclipse.org/bugs/show_bug.cgi?id=86848
-	# GNU XML issue identified by Michael Koch
 	# %patch2 -p0
 	epatch ${WORKDIR}/${P}-build.patch
 	# %patch4 -p0
 	epatch ${WORKDIR}/${P}-libupdatebuild.patch
 	# %patch5 -p0
 	epatch ${WORKDIR}/${P}-libupdatebuild2.patch
+
 	# Build swttools.jar
-	# https://bugs.eclipse.org/bugs/show_bug.cgi?id=90364
 	pushd plugins/org.eclipse.swt.gtk.linux.x86_64 >/dev/null || die "pushd failed"
 	# %patch18 -p0
 	epatch ${WORKDIR}/${P}-swttools.patch
 	popd >/dev/null
-	# https://bugs.eclipse.org/bugs/show_bug.cgi?id=90630
+
 	# %patch22 -p0
 	epatch ${WORKDIR}/${P}-updatehomedir.patch
 	# https://bugs.eclipse.org/bugs/show_bug.cgi?id=90535
+
+	# fridrik: fedora does not apply this anymore because they chekout
+	# org.eclipse.equinox.initializer project from cvs. 'till a fix, we'll
+	# keep the old patch
 	pushd plugins/org.eclipse.core.runtime >/dev/null || die "pushd failed"
 	# %patch24 -p0
 	epatch ${WORKDIR}/${P}-fileinitializer.patch
@@ -316,19 +312,18 @@ patch-jni-libs() {
 }
 
 patch-tomcat() {
-	# tomcat patches
-	# These patches need to go upstream
-	# https://bugs.eclipse.org/bugs/show_bug.cgi?id=98371
 	pushd plugins/org.eclipse.tomcat >/dev/null || die "pushd failed"
 	# %patch28 -p0
 	epatch ${WORKDIR}/${P}-tomcat55.patch
 	# %patch29 -p0
 	epatch ${WORKDIR}/${P}-tomcat55-build.patch
 	popd >/dev/null
+
 	sed --in-place "s/4.1.130/5.5.17/"                      \
 			features/org.eclipse.platform/build.xml \
 			plugins/org.eclipse.tomcat/build.xml    \
 			assemble.*.xml
+
 	pushd plugins/org.eclipse.help.webapp >/dev/null || die "pushd failed"
 	# %patch31 -p0
 	epatch ${WORKDIR}/${P}-webapp-tomcat55.patch
@@ -339,8 +334,6 @@ patch-launcher() {
 	# Because the launcher source is zipped up, we need to unzip, patch, and re-pack
 	mkdir launchertmp
 	unzip -qq -d launchertmp plugins/org.eclipse.platform/launchersrc.zip >/dev/null || die "unzip failed"
-	# https://bugs.eclipse.org/bugs/show_bug.cgi?id=79592
-	# https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=168726
 	pushd launchertmp >/dev/null || die "pushd failed"
 	# %patch47 -p1
 	epatch ${WORKDIR}/${P}-launcher-link.patch
@@ -418,7 +411,7 @@ patch-symlink-ant() {
 		ant-xalan1src.zip \
 		ant-xslp.jar \
 		ant-xslpsrc.zip
-	
+
 	java-pkg_jarfrom ant-core
 	java-pkg_jarfrom ant-tasks
 
@@ -457,7 +450,7 @@ patch-symlink-tomcat() {
 
 	java-pkg_jarfrom tomcat-5.5
 	java-pkg_jarfrom mx4j-2.1
-	java-pkg_jarfrom commons-beanutils-1.6
+	java-pkg_jarfrom commons-beanutils-1.7
 	java-pkg_jarfrom commons-collections
 	java-pkg_jarfrom commons-dbcp
 	java-pkg_jarfrom commons-digester
@@ -481,8 +474,6 @@ patch-symlink-lucene() {
 	pushd plugins/org.apache.lucene/ > /dev/null || die "pushd failed"
 
 	rm lucene-1.4.3.jar
-	# FIXME:  Remove this zip until we have a lucene-devel package containing it.
-	# https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=170343
 	rm lucene-1.4.3-src.zip
 
 	java-pkg_jar-from lucene-1 lucene.jar lucene-1.4.3.jar
@@ -491,6 +482,12 @@ patch-symlink-lucene() {
 }
 
 patch-symlink-junit() {
+	pushd plugins/org.junit4 > /dev/null || die "pushd failed"
+
+	rm junit-4.1.jar
+
+	popd > /dev/null
+
 	pushd plugins/org.junit > /dev/null || die "pushd failed"
 
 	rm junit.jar
@@ -509,28 +506,25 @@ patch-symlink-jsch() {
 }
 
 patch-apply-all() {
-	# begin: patches/comments from fedora
-
 	patch-local-cflags
 
 	patch-jni-libs
-	
-	patch-tomcat
+
+	use tomcat && patch-tomcat
 
 	# pushd plugins/org.eclipse.compare
 	# COMMENTED BY FEDORA %patch33 -p0
 	# popd
 
-	# JPackage s in names of symlinks ...
-	# https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=162177
 	pushd plugins/org.eclipse.jdt.core >/dev/null || die "pushd failed"
 	# %patch34 -p0
 	epatch ${WORKDIR}/${P}-bz162177.patch
+	# epatch ${WORKDIR}/${P}-ecj-square-bracket-classpath.patch
 	# Use ecj for gcj
 	# %patch57 -p0
 	epatch ${WORKDIR}/${P}-ecj-gcj.patch
 	popd >/dev/null
-	# https://bugs.eclipse.org/bugs/show_bug.cgi?id=114001
+
 	# %patch38 -p0
 	epatch ${WORKDIR}/${P}-helpindexbuilder.patch
 	# %patch40 -p0
@@ -547,19 +541,12 @@ patch-apply-all() {
 	pushd features/org.eclipse.platform.launchers >/dev/null || die "pushd failed"
 	# %patch47 -p1
 	epatch ${WORKDIR}/${P}-launcher-link.patch
+	# epatch ${WORKDIR}/${P}-launcher-set-install-dir-and-shared-config.patch
 	popd >/dev/null
-	# Link against our system-installed javadocs
-	# Don't attempt to link to Sun's javadocs
+
 	# %patch48 -p0
 	epatch ${WORKDIR}/${P}-javadoclinks.patch
 
-# I THINK IT'S USELESS: no file has "/usr/share/"
-#	sed --in-place "s:/usr/share/:%{_datadir}/:g"           \
-#		plugins/org.eclipse.jdt.doc.isv/jdtOptions.txt  \
-#		plugins/org.eclipse.pde.doc.user/pdeOptions.txt \
-#		plugins/org.eclipse.pde.doc.user/pdeOptions     \
-#		plugins/org.eclipse.platform.doc.isv/platformOptions.txt
-	# Always generate debug info when building RPMs (Andrew Haley)
 	# %patch49 -p0
 	epatch ${WORKDIR}/${P}-ecj-rpmdebuginfo.patch
 
@@ -572,19 +559,14 @@ patch-apply-all() {
 	sed --in-place "s:@eclipse_base@:${S}:" templates/package-build/build.properties
 	popd >/dev/null
 
-	# https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=191536
-	# https://bugs.eclipse.org/bugs/show_bug.cgi?id=142861
 	pushd plugins/org.eclipse.swt/Eclipse\ SWT >/dev/null || die "pushd failed"
 	# %patch54
 	epatch ${WORKDIR}/${P}-swt-rm-ON_TOP.patch
 	popd >/dev/null
 
-	# We need to disable junit4 and apt until GCJ can handle Java5 code
 	# %patch55 -p0
 	epatch ${WORKDIR}/${P}-disable-junit4-apt.patch
-	rm plugins/org.junit4/junit-4.1.jar
 
-	# I love directories with spaces in their names
 	pushd plugins/org.eclipse.swt >/dev/null || die "pushd failed"
 	mv "Eclipse SWT Mozilla" Eclipse_SWT_Mozilla
 	mv "Eclipse SWT PI" Eclipse_SWT_PI
@@ -602,6 +584,7 @@ patch-apply-all() {
 	mv Eclipse_SWT_Mozilla "Eclipse SWT Mozilla"
 	mv Eclipse_SWT_PI "Eclipse SWT PI"
 	popd >/dev/null
+
 	pushd plugins/org.eclipse.swt.tools >/dev/null || die "pushd failed"
 	mv "JNI Generation" JNI_Generation
 	# %patch60
@@ -614,6 +597,7 @@ patch-apply-all() {
 	# %patch100 -p0
 	epatch ${WORKDIR}/customBuildCallbacks.xml-add-pre.gather.bin.parts.patch
 	popd >/dev/null
+
 	pushd plugins/org.eclipse.platform.doc.user >/dev/null || die "pushd failed"
 	# %patch100 -p0
 	epatch ${WORKDIR}/customBuildCallbacks.xml-add-pre.gather.bin.parts.patch
@@ -628,6 +612,7 @@ patch-apply-all() {
 	# Remove existing .sos
 	find -name \*.so | xargs rm
 
+	# fridrik: updates path to jdk
 	sed --in-place "s:JAVA_HOME = ~/vm/sun142:JAVA_HOME=$(java-config-1 -O):" \
 		plugins/org.eclipse.core.filesystem/natives/unix/linux/Makefile \
 		|| die "Failed to sed Makefile"
@@ -635,8 +620,8 @@ patch-apply-all() {
 	ebegin "Symlinking system jars"
 
 	patch-symlink-ant
-	
-	patch-symlink-tomcat
+
+	use tomcat && patch-symlink-tomcat
 
 	patch-symlink-lucene
 
@@ -645,12 +630,6 @@ patch-apply-all() {
 	patch-symlink-jsch
 
 	eend $?
-
-#	pushd plugins/org.eclipse.swt/Eclipse\ SWT\ PI/gtk/library > /dev/null || die "pushd failed"
-	# /usr/lib -> /usr/lib64
-#	sed --in-place "s:/usr/lib/:%{_libdir}/:g" build.sh
-#	sed --in-place "s:-L\$(AWT_LIB_PATH):-L%{_jvmdir}/java/jre/lib/%{_arch}:" make_linux.mak
-#	popd > /dev/null
 
 	# FIXME: figure out what's going on with build.index on ppc64, s390x and i386   
 	if [ ${ARCH} == "ppc64" ] || [ ${ARCH} == "s390" ] || [ ${ARCH} == "x86" ] || [ ${ARCH} == "ia64" ] ; then
@@ -677,7 +656,7 @@ patch-apply-all() {
 		# there is only partial support for ppc64 in 3.2 so we have to remove this 
 		# partial support to get the replacemnt hack to work
 		find -name \*ppc64\* | xargs rm -r
-		
+
 		# remove remove ppc64 support from features/org.eclipse.platform.source/feature.xml
 		# replace ppc64 with a fake arch (ppc128) so we don't have duplicate ant targets
 		find -type f -name \*.xml -exec sed --in-place "s/\(rootFileslinux_gtk_\)ppc64/\1ppc128/g" "{}" \;
@@ -685,13 +664,13 @@ patch-apply-all() {
 		sed --in-place "s/,.\{38\}ppc64.*macosx/,org.eclipse.platform.source.macosx/g" features/org.eclipse.platform.source/build.xml
 		# replace final occurances with an existing arch
 		sed --in-place "s/ppc64/x86_64/g" features/org.eclipse.platform.source/build.xml
-		
+
 		# remove remove ppc64 support from features/org.eclipse.platform.source/feature.xml
 		mv features/org.eclipse.platform.source/feature.xml features/org.eclipse.platform.source/feature.xml.orig
-		grep -v ppc64 features/org.eclipse.platform.source/feature.xml.orig > features/org.eclipse.platform.source/feature.xml	
-		
+		grep -v ppc64 features/org.eclipse.platform.source/feature.xml.orig > features/org.eclipse.platform.source/feature.xml
+
 		# finally the replacement hack
-		for f in $(find -name \*ia64\* | grep -v motif | grep -v ia64_32); do 
+		for f in $(find -name \*ia64\* | grep -v motif | grep -v ia64_32); do
 		mv $f $(echo $f | sed "s/ia64/${ARCH}/")
 		done
 		find -type f -exec sed --in-place "s/ia64_32/@eye-eh-64_32@/g" "{}" \;
@@ -699,30 +678,32 @@ patch-apply-all() {
 		find -type f -exec sed --in-place "s/@eye-eh-64_32@/ia64_32/g" "{}" \;
 	fi
 
-	ebegin "Polishing files (may take some time)"
+#### CHECK IF GCJ POLISHING IS REALLY NEEDED AS IT REQUIRES A LOT OF TIME
+#	ebegin "Polishing files (may take some time)"
 
 	# gjdoc can't handle Mac-encoded files
 	# http://gcc.gnu.org/bugzilla/show_bug.cgi?id=29167
-	pushd plugins > /dev/null || die "pushd failed"
-	for f in `find .. -name \*.java`; do
-		file $f | grep "CR line" > /dev/null && mac2unix -q $f
-	done
-	popd > /dev/null
+#	pushd plugins > /dev/null || die "pushd failed"
+#	for f in `find .. -name \*.java`; do
+#		file $f | grep "CR line" > /dev/null && mac2unix -q $f
+#	done
+#	popd > /dev/null
 
-	eend $?
+#	eend $?
 
+#### JSCH AND ICU4J SYSTEM LINKING IS SKIPPED AND THE BUNDLED JARS ARE USED
+#### THIS IS DUE TO THE ECLIPSE NEED OF USING THEM AS PLUGIN AND THEREFORE TO
+#### TO REPACKAGE THEM IN A BIT DIFFERENT JAR.
+#### HOPEFULLY THIS WILL BE SOLVED WHEN WILL SET UP A WAY OF PACKAGING PLUGIN
 	# setup the jsch plugin build
-	#rm plugins/org.eclipse.team.cvs.ssh2/com.jcraft.jsch_*.jar
+#	rm plugins/org.eclipse.team.cvs.ssh2/com.jcraft.jsch_*.jar
 	# FIXME remove version number, file a bug about this
-	#pushd baseLocation/plugins > /dev/null
-	# get the Manifest file
-	#unzip -qq -o -d com.jcraft.jsch_0.1.28.jar-build com.jcraft.jsch_*.jar -x com\*
-	#rm com.jcraft.jsch_*.jar
-	#popd > /dev/null
+#	pushd baseLocation/plugins > /dev/null
+#	# get the Manifest file
+#	unzip -qq -o -d com.jcraft.jsch_0.1.28.jar-build com.jcraft.jsch_*.jar -x com\*
+#	rm com.jcraft.jsch_*.jar
+#	popd > /dev/null
 
-#######################
-####################### TODO: ICU4J 3.4.5 IS NOT IN PORTAGE
-#######################
 	# setup with the icu4j plugins for building
 #	pushd baseLocation/plugins > /dev/null || die "pushd failed"
 #	rm com.ibm.icu.base_3.4.5.jar \
@@ -756,8 +737,6 @@ patch-apply-all() {
 		plugins/org.eclipse.swt.tools/swttools.jar \
 		features/org.eclipse.platform.launchers/bin/startup.jar
 
-#######################
-####################### TODO: DISABLED BECAUSE OF ICU4J AND JSCH
-#######################
+#### UNCOMMENT THIS TO SEE OWN MANY BUNDLED JARS HAVE BEEN LEFT
 #	java-pkg_ensure-no-bundled-jars
 }
